--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NEFA - Buy, Trade, NFT Exchange</title>
+  <title>NEFA - Your Prefer Online Banking Platform</title>
 </head>
 
 <body>
